# cfd_simple_cube

./: .gitignore  Makefile  README.md  plot_convergence.py  plot_fields.py  plot_matrix.py  plot_mesh.py  run.sh  verify.py
.github/workflows/: pages.yml
docs/: README.md  build_static.py  pyproject.toml  run.sh
docs/app/: main.py  nav.py  render.py
docs/content/: index.md
docs/content/cpp/: 00-overview.md  01-vec3.md  02-field.md  03-mesh.md  04-fvmatrix.md  05-cgsolver.md  06-simple.md  07-io.md  08-main.md  09-language.md
docs/content/solver/: 01-loop.md  02-running.md  03-validation.md
docs/content/theory/: 01-navier-stokes.md  02-fvm.md  03-convection.md  04-simple.md  05-rhie-chow.md  06-boundary.md  07-linear-system.md  08-cg.md  09-parallel.md
docs/templates/: base.html  page.html
include/: CgSolver.hpp  Field.hpp  Mesh.hpp  Simple.hpp  Vec3.hpp  fvMatrix.hpp  io.hpp
src/: Simple.cpp  io.cpp  main.cpp
